--- a/Project_Notebook.ipynb
+++ b/Project_Notebook.ipynb
@@ -3,6 +3,16 @@
     {
       "cell_type": "markdown",
       "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/AlexanderSutherland/CS7643_Project/blob/main/Project_Notebook.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
         "collapsed": true,
         "id": "dfJtyp5Kefgy",
         "jupyter": {
@@ -16,17 +26,31 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 16,
       "metadata": {
-        "id": "e9wH5bYVefhA"
+        "id": "e9wH5bYVefhA",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "685f4cb9-5cdd-4cc4-ddfb-62b939962493"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "The autoreload extension is already loaded. To reload it, use:\n",
+            "  %reload_ext autoreload\n"
+          ]
+        }
+      ],
       "source": [
         "import math\n",
         "import time\n",
         "import io\n",
         "import numpy as np\n",
         "import pandas as pd\n",
+        "import datetime as dt\n",
         "import csv\n",
         "from IPython.display import Image\n",
         "\n",
@@ -57,7 +81,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 4,
+      "execution_count": null,
       "metadata": {
         "id": "tHOKA0U5efhF",
         "colab": {
@@ -81,16 +105,84 @@
       ]
     },
     {
-      "cell_type": "code",
-      "execution_count": 3,
+      "cell_type": "markdown",
+      "source": [
+        "\n",
+        "*Mount* Google Drive"
+      ],
       "metadata": {
-        "id": "zJXBPulgefhH"
+        "id": "mZwe0eSl3_a9"
+      }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount(\"/content/drive\")\n",
+        "%cd '/content/drive/MyDrive/CS7643_Project/'"
+      ],
+      "metadata": {
+        "id": "zGqaegjy39H1"
       },
-      "outputs": [],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 33,
+      "metadata": {
+        "id": "zJXBPulgefhH",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "7fd24bcb-bc7a-4346-b76b-8997da83cc07"
+      },
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "(3662,)\n",
+            "0    12.153588\n",
+            "1    12.085142\n",
+            "2    12.055198\n",
+            "3    11.961082\n",
+            "4    12.200647\n",
+            "Name: Adj Close, dtype: float64\n",
+            "0         NaN\n",
+            "1         NaN\n",
+            "2         NaN\n",
+            "3    0.984161\n",
+            "4    1.009558\n",
+            "Name: Adj Close, dtype: float64\n"
+          ]
+        }
+      ],
       "source": [
         "# load data\n",
+        "\n",
+        "sd = dt.datetime(2014, 1, 1)\n",
+        "ed = dt.datetime(2016, 1, 1)\n",
+        "\n",
+        "look_ahead = 3\n",
+        "\n",
         "def load_data(TBD = None):\n",
-        "    pass"
+        "    df_smh = pd.read_csv(\"./data/SMH.csv\", parse_dates =['Date'])\n",
+        "\n",
+        "\n",
+        "    #df = pd.read_csv(\"./data/ADI.csv\")\n",
+        "    #print(df.head())\n",
+        "\n",
+        "    df_smh = df_smh[\"Adj Close\"]\n",
+        "    df_smn = df_smh / df_smh.shift(3)\n",
+        "\n",
+        "    print(df_smh.shape)\n",
+        "    print(df_smh.head())\n",
+        "    print(df_smn.head())\n",
+        "\n",
+        "\n",
+        "\n",
+        "load_data()"
       ]
     },
     {
@@ -157,42 +249,18 @@
     }
   ],
   "metadata": {
-    "accelerator": "GPU",
     "colab": {
       "collapsed_sections": [
-        "dfJtyp5Kefgy",
-        "tmSlhfxwefg9",
-        "O66UKOZnefg_",
-        "FDmu06h_efhI",
-        "l6yEbmAxefhR",
-        "cTkd6oseefhS",
-        "zZwBWMZzefhU",
-        "v7zKygJLefhW",
-        "oUL7qUZKefhW",
-        "o7XOnp0LefhX",
-        "fBXsJFeTefhZ",
-        "XYB7O3D1efha",
-        "_VzSCxdPefhd",
-        "qVs0KDP0efhe",
-        "z-S4wWKRefhe",
-        "N49WZFwdefhf",
-        "CPrD-eJoefhg",
-        "aS0afPPDefhh",
-        "-oU3skwOefhi",
-        "KqV-7w2wefhj",
-        "pr_Ehyqvefhk",
-        "RcS_FVV7efhk"
+        "l6yEbmAxefhR"
       ],
-      "gpuType": "T4",
-      "machine_shape": "hm",
-      "provenance": []
+      "provenance": [],
+      "include_colab_link": true
     },
     "interpreter": {
       "hash": "0e75f62e3678e2cc45ba815b06d45149f3ef8e725365fb50a06024c1d0abc38d"
     },
     "kernelspec": {
-      "display_name": "Python 3 (ipykernel)",
-      "language": "python",
+      "display_name": "Python 3",
       "name": "python3"
     },
     "language_info": {
