--- a/Project_Notebook.ipynb
+++ b/Project_Notebook.ipynb
@@ -33,8 +33,8 @@
     },
     "outputId": "685f4cb9-5cdd-4cc4-ddfb-62b939962493",
     "ExecuteTime": {
-     "end_time": "2024-07-28T05:48:26.656318Z",
-     "start_time": "2024-07-28T05:48:26.611421Z"
+     "end_time": "2024-07-28T13:59:43.100128Z",
+     "start_time": "2024-07-28T13:59:40.698398Z"
     }
    },
    "source": [
@@ -71,17 +71,8 @@
     "%load_ext autoreload\n",
     "%autoreload 2"
    ],
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n"
-     ]
-    }
-   ],
-   "execution_count": 14
+   "outputs": [],
+   "execution_count": 3
   },
   {
    "cell_type": "code",
@@ -128,8 +119,8 @@
     },
     "outputId": "7fd24bcb-bc7a-4346-b76b-8997da83cc07",
     "ExecuteTime": {
-     "end_time": "2024-07-28T06:16:39.094200Z",
-     "start_time": "2024-07-28T06:16:39.053628Z"
+     "end_time": "2024-07-28T14:19:24.412552Z",
+     "start_time": "2024-07-28T14:19:24.359192Z"
     }
    },
    "source": [
@@ -138,11 +129,10 @@
     "sd = dt.datetime(2014, 1, 1)\n",
     "ed = dt.datetime(2016, 1, 1)\n",
     "\n",
-    "look_ahead = 3\n",
     "import sklearn as scikit_learn\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
-    "\n",
+    "from utils import lstm_dataprep \n",
     "\n",
     "def load_data(TBD = None):\n",
     "    df_smh = pd.read_csv(\"./data/SMH.csv\", index_col=\"Date\") #, parse_dates =['date'])\n",
@@ -156,18 +146,40 @@
     "    #df_smn = df_smh / df_smh.shift(3)\n",
     "    \n",
     "    \n",
-    "    features = df_smh[['Open', \"High\", \"Low\", \"Volume\"]].values\n",
-    "    target = df_smh['Close']\n",
-    "    features_tensor = torch.tensor(features, dtype=torch.float)\n",
-    "    target_tensor = torch.tensor(target, dtype=torch.float)\n",
-    "    print(\"feature shape\", features_tensor.shape)\n",
-    "    print(\"target shape\", target_tensor.shape)\n",
+    "    \n",
+    "    #features = df_smh[['Open', \"High\", \"Low\", \"Volume\"]].values\n",
+    "    df_target = df_smh[[\"Adj Close\"]]\n",
+    "    \n",
+    "    df_smh = df_smh['Adj Close']\n",
+    "    \n",
+    "    df_shifted = lstm_dataprep(df_target, 4)\n",
+    "    print(df_shifted.head())\n",
+    "    \n",
+    "    # def lstm_dataprep (df, lookback):\n",
+    "    #     new_df = df.copy()\n",
+    "    #     if \"Date\" in new_df.columns:\n",
+    "    #         new_df.set_index(\"Date\", inplace=True)\n",
+    "    #     \n",
+    "    #     for i in range (1, lookback+1):\n",
+    "    #         print(\"test\", i)\n",
+    "    #         new_df[f'Adj Close(t-{i})'] = new_df['Adj Close'].shift(i)\n",
+    "    #     \n",
+    "    #     new_df.dropna(inplace=True)\n",
+    "    #     return new_df\n",
+    "    \n",
+    "    \n",
+    "\n",
+    "    # \n",
+    "    # features_tensor = torch.tensor(features, dtype=torch.float)\n",
+    "    # target_tensor = torch.tensor(target, dtype=torch.float)\n",
+    "    # print(\"feature shape\", features_tensor.shape)\n",
+    "    # print(\"target shape\", target_tensor.shape)\n",
     "    #print(target.head())\n",
     "    \n",
     "    # print(df_smh.head())\n",
     "    # \n",
     "    # scaler = MinMaxScaler()\n",
-    "    # df_smh = scaler.fit_transform(df_smh.values.reshape(-1, 1))\n",
+    "    # df_smh = scaler.fit_transform(df_smh.values)\n",
     "    # print(df_smh)\n",
     "    \n",
     "load_data()"
@@ -177,12 +189,25 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "feature shape torch.Size([3662, 4])\n",
-      "target shape torch.Size([3662])\n"
+      "           Adj Close  Adj Close(t-1)  Adj Close(t-2)  Adj Close(t-3)  \\\n",
+      "Date                                                                   \n",
+      "1/8/2010   12.200647       11.961082       12.055198       12.085142   \n",
+      "1/11/2010  12.157867       12.200647       11.961082       12.055198   \n",
+      "1/12/2010  11.725797       12.157867       12.200647       11.961082   \n",
+      "1/13/2010  11.875525       11.725797       12.157867       12.200647   \n",
+      "1/14/2010  11.892636       11.875525       11.725797       12.157867   \n",
+      "\n",
+      "           Adj Close(t-4)  \n",
+      "Date                       \n",
+      "1/8/2010        12.153588  \n",
+      "1/11/2010       12.085142  \n",
+      "1/12/2010       12.055198  \n",
+      "1/13/2010       11.961082  \n",
+      "1/14/2010       12.200647  \n"
      ]
     }
    ],
-   "execution_count": 39
+   "execution_count": 22
   },
   {
    "cell_type": "markdown",
